@@ -1,4 +1,8 @@
-﻿zg 26.04.2015 00:40:10 +0200 - build 4358
+﻿drkns 26.04.2015 01:04:53 +0200 - build 4359
+
+1. Продолжение 4356.
+
+zg 26.04.2015 00:40:10 +0200 - build 4358
 
 1. уточнение 4353.2: Отпускание модификатора может быть воспринято как BreakKey для меню.
 
